add apis and style

--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,15 @@
     <title>Weather App</title>
 </head>
 <body>
-    <h1>Weather Nigga</h1>
+    <div id="contain">
+        <div id="giph"><img src="" alt=""></div>
+        <div id="form">
+            <form>
+                <label for="location">Location</label>
+                <input type="text" name="location" id="location">
+                <button type="button" id="get">Get weather</button>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
